--- a/src/components/cipherDecoder.css
+++ b/src/components/cipherDecoder.css
@@ -431,6 +431,7 @@ body, html {
   padding-left: 1rem;
   position: absolute;
   left: 0;
+  bottom: 0;
   z-index: 1;
 }
 
@@ -441,11 +442,12 @@ body, html {
   padding-right: 1rem;
   position: absolute;
   right: 0;
+  bottom: 0;
   z-index: 1;
 }
 
 .keyboard-buttons.right-side .action-button {
-  margin-bottom: 1rem;
+  margin-bottom: 0;
 }
 
 .alphabet {
@@ -1008,14 +1010,20 @@ body, html {
     position: relative;
     padding: 0;
     order: unset;
+    position: absolute;
+    bottom: 0;
   }
   
   .keyboard-buttons.left-side {
     align-items: center;
+    left: 0;
+    padding-left: 0.5rem;
   }
   
   .keyboard-buttons.right-side {
     align-items: center;
+    right: 0;
+    padding-right: 0.5rem;
   }
   
   .alphabet {
